2003-05-02  Daiki Ueno  <ueno@unixuser.org>

	* mime-play.el (mime-activate-mailcap-method): Check the existance
	of the temporary file.
	[cf. <Wanderlust:11835>]

2003-04-05  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* mime-view.el (mime-preview-toggle-display): Use boundary with
	children.

2003-02-08  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>

	* mime-view.el (mime-save-situation-examples): Bind print-length
	and print-level.

2002-11-05  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>

	* mime-view.el (mime-preview-find-boundary-info): Change the name of
	the argument from get-mother to with-children along its effect.

2002-11-03  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>

	* mime-edit.el (mime-edit-decode-single-part-in-buffer): Decode text
	part only.

2002-11-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-view.el (mime-view-insert-fontified-text-content): Make
	sure font-lock is loaded before using it.

2002-10-26  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>

	* mime-view.el (mime-preview-find-boundary-info): Fix logic. Do not
	refer next to next part before examining the next part.

2002-08-28  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mime-edit.el (mime-edit-user-agent-value): Add
	`xemacs-extra-name'.

2002-04-16   Daiki Ueno  <ueno@unixuser.org>

	* mime-edit.el (mime-file-types): Add setting of *.jpeg for image/jpeg.

2002-03-06   Daiki Ueno  <ueno@unixuser.org>

	* mime-view.el (mime-view-read-charset): Remove redundant checking for
	sanity when reading MIME-charset.
	[cf. <emacs-mime-ja:995>]

2002-02-14  Yuuichi Teranishi <teranisi@gohome.org>

	* mime-image.el (mime-image-create) [XEmacs]: Ignore errors about
	to obtain the instance of glyph's image.
	[cf. <emacs-mime-ja:989>]

2001-11-27   Daiki Ueno  <ueno@unixuser.org>

	* mime-w3.el: Don't use `url-register-protocol' if it is not fboundp;
	announce `url-cid' feature instead.
	[cf. <Wanderlust:8566>]

	(url-cid): Change return value for the current URL package.
